# async-graphql-reverse

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  flake.nix  rust-toolchain.toml
derive_macro/: Cargo.toml
derive_macro/src/: lib.rs
examples/: Cargo.toml
examples/simple/: Cargo.toml  datasource.rs  lib.rs  main.rs
examples/simple/datasource/: mod.rs
examples/simple/input/: .gitignore  reverse.toml  schema.graphql
examples/simple/output/: enums.rs  input_objects.rs  interfaces.rs  mod.rs  objects.rs  scalars.rs  unions.rs
src/: config.rs  lib.rs
src/parse/: mod.rs
src/parse/ignoring/: mod.rs
src/parse/structured/: mod.rs  schema.rs
src/render/: argument.rs  comment.rs  config.rs  datasource.rs  dependencies.rs  enums.rs  fields.rs  files.rs  input_fields.rs  input_objects.rs  interfaces.rs  keywords.rs  linter.rs  mod.rs  objects.rs  scalars.rs  sorter.rs  tokens.rs  typ.rs  unions.rs  utils.rs
