[package]
name = "async-graphql-reverse"
version = "0.6.1"
authors = ["tacogips <me@tacogips.me>"]
edition = "2018"


# TODO(tacogips) is excluding apparantly not working when cargo test?
exclude = ["examples"]

[[bin]]
name = "async-graphql-reverse"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0"
async-graphql = "7.0.7"
async-graphql-parser = "7.0.7"
clap = { version = "4.5.11", features = ["derive"] }
env_logger = "0.11.5"
# TODO(tacogips) lazy_static would be deprecated after rust 1.70
# https://github.com/rust-lang-nursery/lazy-static.rs/issues/214
lazy_static = "1.4"
log = "0.4"
structopt = "0.3"
strum = { version = "0.26.3", features = ["derive"] }
derive_macro_tool = { path = "derive_macro" }
proc-macro2 = { version = "1.0", default-features = false }
quote = "1.0"
syn = { version = "2.0.72", features = ["extra-traits", "clone-impls"] }
heck = "0.5.0"
paste = "1.0"
toml = "0.8.16"
serde = { version = "1", features = ["derive"] }


[dev-dependencies]
axum = "0.7.5"
axum-extra = "0.9.3"
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
async-graphql-axum = "7.0.7"
