[package]
name = "simple"
version = "0.1.0"
authors = ["tacogips <me@tacogips.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "simple"
path = "lib.rs"

[[bin]]
name = "simple-bin"
path = "main.rs"

[dependencies]
anyhow = "1.0"
async-graphql = "6.0.1"
structopt = "0.3"
axum = { version = "0.6.0", features = ["headers"] }
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
async-graphql-axum = "6.0.1"
